Fixed gap between blue boxes

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 .middle-top {
     display: flex;
     justify-content: center;
-    gap: 52px;
+    gap: 8px;
 }
 
 .info {
